--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,9 @@ authors = ["Skeletonxf <skeletonxf@gmail.com>"]
 
 [dependencies]
 # reddit api
-rawr = "0.1.1"
+# need unreleased patch that makes newlines work on reddit
+# https://github.com/Aurora0001/rawr/commit/34bc914cc6a9fe001ebab7b90a9c396e8a36b2ba
+rawr = { git = 'https://github.com/Aurora0001/rawr' }
 # sqlite db
 rusqlite = "0.13.0"
 # json parsing
