--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,9 @@ rlua = "0.12.0"
 # converting to std::error::Error types for rlua
 failure = "0.1.1"
 
-# Non essential utilities for the lua script
-# regex parsing
+# Non essential
+
+# utilities for the lua script regex parsing
 regex = "0.2"
+# colored output in terminal
+ansi_term = "0.11"
