Avoid replying to comments where already replied
This check completements the database check, so that now the only way the bot will reply to the same comment multiple times is if both its comment is deleted and its database is reset or it is ran from another machine

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,9 @@ authors = ["Skeletonxf <skeletonxf@gmail.com>"]
 # and also need Clone for Submission types so don't lose the object
 # when want to look over its replies
 # implemented by https://github.com/JoshMcguigan/rawr/commit/dcc7402ccbd60444a2ee2a18c6de2c7835375319
-rawr = { git = 'https://github.com/JoshMcguigan/rawr' }
+# also need Clone for Comments at
+# https://github.com/Skeletonxf/rawr/commit/b8075ec9a141e3e807949b0f4f2d1bd3468e8af3
+rawr = { git = 'https://github.com/Skeletonxf/rawr' }
 # sqlite db
 rusqlite = "0.13.0"
 # json parsing
